--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_CXX_FLAGS_RELEASE "-O3" )
-set(CMAKE_CXX_FLAGS_DEBUG "-fsanitize=address -fsanitize=leak -fsanitize=undefined -fsanitize-address-use-after-scope" )
+set(CMAKE_CXX_FLAGS_DEBUG "-g -fsanitize=address -fsanitize=leak -fsanitize=undefined -fsanitize-address-use-after-scope" )
 find_package(PkgConfig REQUIRED )
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
