--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,25 +4,29 @@
     // Weitere Informationen finden Sie unter https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+      {
+        "name": "(gdb) Starten",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "${workspaceFolder}/build/bat_desktop",
+        "args": ["${workspaceFolder}/bats"],
+        "stopAtEntry": false,
+        "cwd": "${fileDirname}",
+        "environment": [],
+        "externalConsole": false,
+        "MIMode": "gdb",
+        "setupCommands": [
+            {
+                "description": "Automatische Strukturierung und Einrückung für gdb aktivieren",
+                "text": "-enable-pretty-printing",
+                "ignoreFailures": true
+            },
+            {
+                "description": "Disassemblierungsvariante auf Intel festlegen",
+                "text": "-gdb-set disassembly-flavor intel",
+                "ignoreFailures": true
+            }
+        ]
+      },
 
-        {
-            "name": "Debug",
-            "type": "cppdbg",
-            "cwd": "${workspaceFolder}",
-            "program": "${workspaceFolder}/build/bat_desktop",
-            "request": "launch",
-            "args" : [ "${workspaceFolder}/b" ],
-            "linux": {
-                "MIMode": "gdb",
-                "miDebuggerPath": "/usr/bin/gdb"
-              },
-              "osx": {
-                "MIMode": "lldb"
-              },
-              "windows": {
-                "MIMode": "gdb",
-                "miDebuggerPath": "C:\\MinGw\\bin\\gdb.exe"
-              }
-        },
-    ]
 }
