fix: portability issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,6 +76,7 @@
         "variant": "cpp",
         "codecvt": "cpp",
         "fftw3.h": "c",
-        "flo_file.h": "c"
+        "flo_file.h": "c",
+        "qimage": "cpp"
     }
 }
