--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
         "codecvt": "cpp",
         "fftw3.h": "c",
         "flo_file.h": "c",
-        "qimage": "cpp"
+        "qimage": "cpp",
+        "hash_map": "cpp"
     }
 }
