tut ein bisserl

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,12 @@
     // Weitere Informationen finden Sie unter https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
       {
         "name": "(gdb) Starten",
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceFolder}/build/bat_desktop",
-        "args": ["/media/olaf/BAT/bat034/capture00000.raw"],
+        "args": ["${env:HOME}/bat034/capture00000.raw"],
         "stopAtEntry": false,
         "cwd": "${fileDirname}",
         "environment": [],
@@ -29,5 +28,5 @@
             }
         ]
       },
-
+    ]
 }
