Adding License text

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,7 @@ find_package(Threads REQUIRED)
 find_package(SDL2 REQUIRED)
 find_package(GLEW REQUIRED)
 # add_compile_options("-Wall" "-pedantic" "-fopenmp" "-fsanitize=address" "-fsanitize=leak" "-fsanitize=undefined" "-fsanitize-address-use-after-scope"  )
-add_compile_options("-Wall" "-pedantic" "-fopenmp")
-
+add_compile_options("-std=c23" "-Wall" "-pedantic" "-fopenmp")
 #add_link_options("-fopenmp" "-fsanitize=address" "-fsanitize=leak" "-fsanitize=undefined" "-fsanitize-address-use-after-scope")
 add_link_options("-fopenmp" )
 add_executable(bat_desktop main.c lib.c create_image.h create_image_meow.c flo_shader.h flo_pixmap.h flo_file.h)
