--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(SDL2 REQUIRED)
 
 add_compile_options("-std=gnu23" "-Wall" "-pedantic" "-fopenmp") 
 add_compile_options("-Wformat" "-Wformat=2" "-Wsign-conversion" "-Werror=format-security" "-Wimplicit-fallthrough")
-add_compile_options("-fstack-clash-protection" "-fstack-protector-strong" )
+#add_compile_options("-fstack-clash-protection" "-fstack-protector-strong" )
 add_compile_options("-Werror=implicit" "-Werror=incompatible-pointer-types" "-Werror=int-conversion")
 add_compile_options("-fexceptions")
 #add_compile_options( "-fsanitize=address" "-fsanitize=leak"  "-fsanitize=undefined" "-fsanitize-address-use-after-scope"  )
