--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ add_link_options("-fopenmp")
 #add_link_options("-fsanitize=undefined")
 add_link_options("-Wl,-z,nodlopen" "-Wl,-z,noexecstack" "-Wl,-z,relro" "-Wl,-z,now"  "-Wl,--as-needed" "-Wl,--no-copy-dt-needed-entries")
 #add_link_options("-fsanitize=address" "-fsanitize=leak" "-fsanitize=undefined" "-fsanitize-address-use-after-scope")
-add_executable(bat_desktop main.c lib.c create_image.h create_image_meow.c flo_pixmap.h flo_file.h)
+add_executable(bat_desktop main.c lib.c sub_texture.c create_image.h create_image_meow.c flo_pixmap.h flo_file.h sub_texture.h)
 target_link_libraries(bat_desktop PRIVATE SDL2::SDL2 m)
 
 
